force-app/main/default/objects/Account/fields/WhyMikeRocks__c.field-meta.xml
<CustomField>
    <fullName>WhyMikeRocks__c</fullName>
    <label>Why Mike Rocks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>