force-app/main/default/objects/Account/fields/Widget__c.field-meta.xml
<CustomField>
    <fullName>Widget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Widget</label>
    <referenceTo>Widget__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>