force-app/main/default/objects/Account/fields/Widget_Field__c.field-meta.xml
<CustomField>
    <fullName>Widget_Field__c</fullName>
    <formula>Widget__r.SomeFieldOnWidget2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Widget Field</label>
    <type>Text</type>
</CustomField>